# CaptainsLog

./: CMakeLists.txt  README.md
src/: captnassert.c  captnassert.h  captnlog.c  captnlog.h  captnmessage.h  captnmessage_gtk.c  captnmessage_macos.m  captnmessage_win32.c  captntrap.h
